--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,18 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+/* loader */
+.spinner {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.383);
+}
+
+.form-btn {
+  width: 250px !important;
+  margin-top: 30px !important;
+}
